src/index.css
/********************VARIABLES***********************/
:root {
  --primary-navigation-text-color: #ffffff;
  --about-image-size: 20rem;
}
/********************LOGO***********************/

/********************LOGO***********************/
.logo {
  width: 4rem;
  height: 4rem;
  border-radius: 4rem;
  border: 0.25rem solid whitesmoke;
  object-fit: cover;
  opacity: 1 !important;
}
/********************LOGO***********************/
.border-image-projects {
  position: relative;
  top: 7rem;
  border: 1rem solid white;
  border-radius: 0.2rem;
}

.carousel {
  width: 100%;
  height: 100%;
}
.nav-item {
  font-family: "Roboto", sans-serif;
  border-radius: 100px;
}
.robotoclass {
  color: whitesmoke !important;
  font-family: "Roboto", sans-serif;
}

.nav-item:hover {
  background-color: rgba(200, 200, 200, 0.2);
  transition: 0.5s;
}

.name-logo {
  color: whitesmoke;
  font-family: "Roboto", sans-serif;
  font-size: 30px;
}
.about-image {
  margin-top: 2rem;
  box-shadow: 0 0 1rem #2a2e33;
  height: var(--about-image-size);
  width: var(--about-image-size);
  border-radius: 100rem;
  object-fit: cover;
  margin-bottom: 1.3rem;
}
.aboutcoltext {
  text-align: center;
}
.abouttext {
  max-width: 40rem;
  text-align: left;
  font-family: "Roboto", sans-serif;
}
.labelabouttext {
  background-color: #343a40;
  color: whitesmoke;
  border-radius: 15px;
  border: 10px solid transparent;
  margin-right: 10px;
}
.labelaboutintermidiate {
  background-color: #2a2e33;
  border-radius: 20px;
  width: auto;
  height: auto;
  margin-bottom: 10px;
}
.labelaboutbasic {
  border-radius: 20px;
  width: auto;
  height: auto;
  background-color: #2a2e33;
}
.labelabouttextskills {
  max-width: 40rem;
  border-radius: 20px;
  border: 20px solid gray;
  background-color: gray;
  text-align: center;
  align-content: center;
  color: whitesmoke;
}

.container-grid {
  display: grid;
  grid-template-columns: 50% 50%;
  height: 100%;
}
.aboutcontainer {
  position: relative;
  text-align: center;
}
@media only screen and (max-width: 620px) {
  .labelabouttextskills {
    width: 100vw;
  }
}

@media only screen and (max-width: 700px) {
  .aboutcontainer {
    display: block;
    top: 5%;
    -ms-transform: translateY(0%);
    transform: translateY(0%);
    max-width: 500px;
  }
  .aboutwindow {
    height: 100vh;
    min-height: 65rem;
    position: relative;
    background-color: whitesmoke;
  }

  .about-image {
    height: 10rem;
    width: 10rem;
  }
}
@media only screen and (max-height: 900px) {
  .aboutcontainer {
    display: block;
    top: 5%;
    -ms-transform: translateY(0%);
    transform: translateY(0%);
    max-width: 500px;
  }
  .aboutwindow {
    display: flex;
    justify-content: center;
    height: 120vh !important;
    text-align: center;
    position: relative;
    background-color: whitesmoke;
  }
  .about-image {
    height: 10rem;
    width: 10rem;
  }
}
.aboutskillscontainer {
  display: flex;
  justify-content: center;
}
.background-projects {
  background-color: #343a40;
}

.aboutpage {
  position: relative;
  background-color: whitesmoke;
  min-height: inherit;
}

.aboutwindow {
  position: relative;
  display: flex;
  justify-content: center;
  height: 100vh;
  background-color: whitesmoke;
}
.contact-container {
  position: relative;
  background-color: gray;
  border-radius: 10px;
  animation: contact-container-animation 0.3s forwards;
}
.btn-contact {
  margin-left: 20px;
  margin-bottom: 10px;
}

@keyframes backgroundtranzition {
  from {
    background-color: transparent;
  }
  to {
    background-color: rgba(0, 0, 0, 0.7);
  }
}
@keyframes contact-container-animation {
  from {
    top: calc(30vh - 10px);
  }
  to {
    top: 30vh;
  }
}
.btn-contactme {
  font-weight: bold !important;
}
.contact-form {
  position: fixed;
  z-index: 1000;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100vh;
  animation-name: backgroundtranzition;
  animation-duration: 1s;
  animation-fill-mode: forwards;
  z-index: 1000;
  transition: 1s;
}
html {
  scroll-behavior: smooth;
}

.project-container {
  border-bottom: 1rem solid #343a40;
  text-align: center;
  background-color: #343a40;
  height: auto !important;
}
.background-navbar {
  background-color: black;
}

.navbar-nav > li > a {
  color: var(--primary-navigation-text-color) !important;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.particlesbackground {
  position: relative;
  width: 100%;
  height: 100vh;
  z-index: 0;
  background-color: gray;
}

.navbar-toggler {
  background-color: transparent;
  border: none !important;
  border-radius: 30rem !important;
  width: 3.5rem;
  height: 3.5rem;
  opacity: 1;
  text-align: center;
  transition: 0.2s;
}
.navbar-toggler-icon {
  color: whitesmoke !important;
}

.navbar-toggler:active {
  opacity: 1;
  background-color: gray !important;
  transition: 0.2s;
}
.navbar {
  background-color: #2a2e33 !important;
  transition: 0.3s !important;
}

.navbar-collapse {
  background-color: #2a2e33;
}

.navbar:hover {
  transition: 0.5s;
}
.navbar-hover-hidden {
  position: absolute;
  height: 110px;
  width: 100%;
  top: 0px;
  left: 0;
  z-index: -1;
  background-color: #2a2e33;
}

.footer {
  position: relative;
  min-height: 15vh !important;
}

.title {
  display: flex;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-size: 4rem;
}

